tests/error/comptime/range_subscript_bounds_check22.bz
// error: negative begin index -1 in range subscript for an array of size 10
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let a = [10: int32]();
		let a = a[..];
		a[-1i32..];
	});
}
